# infra/payment-provider/src/domain/interfaces/use-cases/payment/response.ts
@@ -1,3 +1,3 @@
 export interface IResponsePayment {
-  transactiondId: string;
+  transactionId: string;
 }
